LightGBM model  have the best results.

--- a/Classification/Loan_Default_Prediction/Project_01/notebooks/Model_Evaluation.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/notebooks/Model_Evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "e0728a26",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting scikeras\n",
-      "  Downloading scikeras-0.13.0-py3-none-any.whl.metadata (3.1 kB)\n",
+      "Requirement already satisfied: scikeras in /usr/local/lib/python3.12/dist-packages (0.13.0)\n",
       "Requirement already satisfied: keras>=3.2.0 in /usr/local/lib/python3.12/dist-packages (from scikeras) (3.10.0)\n",
       "Requirement already satisfied: scikit-learn>=1.4.2 in /usr/local/lib/python3.12/dist-packages (from scikeras) (1.6.1)\n",
       "Requirement already satisfied: absl-py in /usr/local/lib/python3.12/dist-packages (from keras>=3.2.0->scikeras) (1.4.0)\n",
@@ -28,10 +27,7 @@
       "Requirement already satisfied: typing-extensions>=4.6.0 in /usr/local/lib/python3.12/dist-packages (from optree->keras>=3.2.0->scikeras) (4.15.0)\n",
       "Requirement already satisfied: markdown-it-py>=2.2.0 in /usr/local/lib/python3.12/dist-packages (from rich->keras>=3.2.0->scikeras) (4.0.0)\n",
       "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /usr/local/lib/python3.12/dist-packages (from rich->keras>=3.2.0->scikeras) (2.19.2)\n",
-      "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.12/dist-packages (from markdown-it-py>=2.2.0->rich->keras>=3.2.0->scikeras) (0.1.2)\n",
-      "Downloading scikeras-0.13.0-py3-none-any.whl (26 kB)\n",
-      "Installing collected packages: scikeras\n",
-      "Successfully installed scikeras-0.13.0\n"
+      "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.12/dist-packages (from markdown-it-py>=2.2.0->rich->keras>=3.2.0->scikeras) (0.1.2)\n"
      ]
     }
    ],
@@ -42,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "6acdb8a1",
    "metadata": {},
    "outputs": [],
@@ -107,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "388bc9c6",
    "metadata": {},
    "outputs": [],
@@ -118,18 +114,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "d1bbd0d8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Successfully added 'src' directory to Python path.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define project Path in Colab\n",
     "PROJECT_BASE_PATH = '/content/drive/MyDrive/Project_01' \n",
@@ -148,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "98ce8742",
    "metadata": {},
    "outputs": [
@@ -179,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "c0186bb6",
    "metadata": {},
    "outputs": [
@@ -187,8 +175,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Loaded Encoded Train Data. Shape: (307511, 266)\n",
-      "✅ Loaded Encoded Test Data. Shape: (48744, 265)\n"
+      "✅ Loaded Encoded Train Data. Shape: (307511, 135)\n",
+      "✅ Loaded Encoded Test Data. Shape: (48744, 134)\n"
      ]
     }
    ],
@@ -213,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "6d1e0112",
    "metadata": {},
    "outputs": [
@@ -221,134 +209,120 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Running Data Diagnostics on Features (X) ---\n"
+      "--- Starting Comprehensive Model Cross-Validation on SIMPLIFIED Data ---\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ All features appear to be numerical (int/float).\n",
-      "⚠️ WARNING: X contains 1900440 NaN values and 0 Inf values.\n",
-      "   The Universal Preprocessor Pipeline should handle these.\n",
-      "✅ X converted to NumPy array for training.\n"
+      "--- Running 3-Fold Cross-Validation for 6 models ---\n",
+      "--------------------------------------------------\n",
+      "Model: Logistic Regression (Scaled)\n",
+      "Mean AUC: 0.7459 (Std Dev: 0.0021)\n",
+      "Training Time: 55.63 seconds\n",
+      "--------------------------------------------------\n",
+      "Model: K-Nearest Neighbors (Scaled)\n",
+      "Mean AUC: 0.5748 (Std Dev: 0.0003)\n",
+      "Training Time: 876.44 seconds\n",
+      "--------------------------------------------------\n",
+      "Model: Decision Tree (Clean)\n",
+      "Mean AUC: 0.5395 (Std Dev: 0.0025)\n",
+      "Training Time: 99.57 seconds\n",
+      "--------------------------------------------------\n",
+      "Model: Random Forest (Clean)\n",
+      "Mean AUC: 0.7264 (Std Dev: 0.0018)\n",
+      "Training Time: 111.14 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.12/dist-packages/joblib/externals/loky/process_executor.py:782: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------\n",
+      "Model: LightGBM (Base)\n",
+      "Mean AUC: 0.7586 (Std Dev: 0.0027)\n",
+      "Training Time: 199.39 seconds\n",
+      "--------------------------------------------------\n",
+      "Model: XGBoost (Base)\n",
+      "Mean AUC: 0.7211 (Std Dev: 0.0095)\n",
+      "Training Time: 129.56 seconds\n",
+      "\n",
+      "--- Summary of Model Performance (Ranked by Mean AUC) ---\n",
+      "                          Model  Mean_AUC  Std_Dev_AUC  Time_Seconds\n",
+      "4               LightGBM (Base)  0.758578     0.002664    199.387240\n",
+      "0  Logistic Regression (Scaled)  0.745944     0.002082     55.631243\n",
+      "3         Random Forest (Clean)  0.726444     0.001812    111.135025\n",
+      "5                XGBoost (Base)  0.721120     0.009476    129.557973\n",
+      "1  K-Nearest Neighbors (Scaled)  0.574846     0.000316    876.444904\n",
+      "2         Decision Tree (Clean)  0.539471     0.002540     99.566021\n"
      ]
     }
    ],
    "source": [
-    "print(\"--- Running Data Diagnostics on Features (X) ---\")\n",
+    "print(\"--- Starting Comprehensive Model Cross-Validation on SIMPLIFIED Data ---\")\n",
     "\n",
-    "# 1. Separate Features (X) and Target (y)\n",
-    "EXCLUDED_COLS = ['SK_ID_CURR', 'TARGET', 'TIME_INDEX'] \n",
+    "# 1. Prepare Features (X) and Target (y)\n",
+    "EXCLUDED_COLS = ['SK_ID_CURR', 'TARGET'] \n",
     "features = [col for col in df_train_final.columns if col not in EXCLUDED_COLS]\n",
     "\n",
     "X = df_train_final[features]\n",
     "y = df_train_final['TARGET']\n",
     "\n",
-    "# 2. Check for Non-Numerical Data Types\n",
-    "non_numeric_cols = X.select_dtypes(include=['object', 'category']).columns\n",
+    "# 2. Define Preprocessing Steps\n",
+    "# The data is much cleaner now, so we only need SimpleImputer to handle residual NaNs (like DAYS_EMPLOYED anomaly).\n",
+    "# NOTE: We can skip the FunctionTransformer for 'Inf' replacement, as Target Encoding is unlikely to generate Infs.\n",
     "\n",
-    "if len(non_numeric_cols) > 0:\n",
-    "    print(\"❌ CRITICAL ERROR: Found non-numerical columns in the feature matrix X.\")\n",
-    "    print(\"   Please fix the following columns in Block 13 (Encoding):\")\n",
-    "    print(non_numeric_cols)\n",
-    "    # Stop execution to prevent further errors\n",
-    "    raise ValueError(\"Non-numerical features found. Check Block 13.\")\n",
-    "else:\n",
-    "    print(\"✅ All features appear to be numerical (int/float).\")\n",
-    "\n",
-    "# 3. Final Check for Invalid Values (NaN/Inf) *before* the Pipeline\n",
-    "# (The Pipeline should handle this, but checking the raw state is useful)\n",
-    "total_nans = X.isna().sum().sum()\n",
-    "total_infs = np.isinf(X).sum().sum()\n",
-    "\n",
-    "if total_nans > 0 or total_infs > 0:\n",
-    "    print(f\"⚠️ WARNING: X contains {total_nans} NaN values and {total_infs} Inf values.\")\n",
-    "    print(\"   The Universal Preprocessor Pipeline should handle these.\")\n",
-    "else:\n",
-    "    print(\"✅ No NaNs or Infs found in raw features (before pipeline).\")\n",
-    "\n",
-    "# 4. Convert X to a pure NumPy array for Scikit-learn (Safe measure)\n",
-    "# This forces Pandas to resolve any underlying type issues.\n",
-    "X = X.values \n",
-    "print(\"✅ X converted to NumPy array for training.\")\n",
-    "\n",
-    "# (Continue with the KFold setup and training loop...)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "88755eab",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Starting Model Cross-Validation ---\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "# Define the Inf/NaN Cleanup Step\n",
-    "replace_inf = FunctionTransformer(lambda X: np.nan_to_num(X, nan=np.nan, posinf=np.nan, neginf=np.nan), \n",
-    "                                  validate=False)\n",
-    "\n",
-    "# Define the Universal Preprocessor Pipeline (Inf/NaN Handling)\n",
-    "universal_preprocessor = Pipeline([\n",
-    "    ('inf_handler', replace_inf),\n",
+    "universal_imputer = Pipeline([\n",
+    "    # Use 'mean' strategy to handle residual NaNs from the simplified feature engineering\n",
     "    ('imputer', SimpleImputer(strategy='mean')),\n",
     "])\n",
     "\n",
     "\n",
-    "# 1. Configuration and Model List \n",
+    "# 3. Model List (Applying Imputation and Scaling strategically)\n",
     "models = [\n",
-    "    # A. Linear & Scaled Models (Need Preprocessor + Scaler)\n",
+    "    # A. Linear & Scaled Models (Need Imputer + Scaler)\n",
     "    ('Logistic Regression (Scaled)', Pipeline([\n",
-    "        ('preprocessor', universal_preprocessor),\n",
+    "        ('preprocessor', universal_imputer),\n",
     "        ('scaler', StandardScaler()), \n",
     "        ('classifier', LogisticRegression(solver='liblinear', random_state=42, C=0.01, max_iter=200))\n",
     "    ])),\n",
     "    ('K-Nearest Neighbors (Scaled)', Pipeline([\n",
-    "        ('preprocessor', universal_preprocessor),\n",
+    "        ('preprocessor', universal_imputer),\n",
     "        ('scaler', StandardScaler()), \n",
     "        ('classifier', KNeighborsClassifier(n_neighbors=5))\n",
     "    ])),\n",
     "    \n",
-    "    # B. Tree Models (Need Preprocessor for NaN handling)\n",
+    "    # B. Tree Models (Need Imputer for safety/consistency with base scikit-learn)\n",
     "    ('Decision Tree (Clean)', Pipeline([\n",
-    "        ('preprocessor', universal_preprocessor),\n",
+    "        ('preprocessor', universal_imputer),\n",
     "        ('classifier', DecisionTreeClassifier(random_state=42))\n",
     "    ])),\n",
     "    ('Random Forest (Clean)', Pipeline([\n",
-    "        ('preprocessor', universal_preprocessor),\n",
+    "        ('preprocessor', universal_imputer),\n",
     "        ('classifier', RandomForestClassifier(n_estimators=100, max_depth=5, random_state=42, n_jobs=-1))\n",
     "    ])),\n",
     "\n",
-    "    # C. Boosting Models (Run through Preprocessor for consistency)\n",
-    "    ('LightGBM (Clean)', Pipeline([\n",
-    "        ('preprocessor', universal_preprocessor),\n",
+    "    # C. Boosting Models (Imputer kept for consistency, although they handle NaNs)\n",
+    "    ('LightGBM (Base)', Pipeline([\n",
+    "        ('preprocessor', universal_imputer),\n",
     "        ('classifier', lgb.LGBMClassifier(random_state=42, n_jobs=-1, verbose=-1, n_estimators=500))\n",
     "    ])),\n",
-    "    ('XGBoost (Clean)', Pipeline([\n",
-    "        ('preprocessor', universal_preprocessor),\n",
+    "    ('XGBoost (Base)', Pipeline([\n",
+    "        ('preprocessor', universal_imputer),\n",
     "        ('classifier', xgb.XGBClassifier(use_label_encoder=False, eval_metric='logloss', random_state=42, n_jobs=-1, n_estimators=500))\n",
     "    ])),\n",
     "]\n",
     "\n",
-    "# Set up Cross-Validation strategy\n",
+    "# 4. Set up Cross-Validation strategy\n",
     "NFOLDS = 3 \n",
     "kfold = KFold(n_splits=NFOLDS, shuffle=True, random_state=42)\n",
     "\n",
@@ -358,15 +332,15 @@
     "training_times = []\n",
     "\n",
     "\n",
-    "# 2. Training Loop with Cross-Validation\n",
+    "# 5. Training Loop with Cross-Validation\n",
     "\n",
-    "print(\"--- Starting Model Cross-Validation ---\")\n",
+    "print(f\"--- Running {NFOLDS}-Fold Cross-Validation for {len(models)} models ---\")\n",
     "\n",
     "for name, model in models:\n",
     "    start_time = time()\n",
     "    \n",
     "    try:\n",
-    "        # Perform Cross-Validation using ROC AUC\n",
+    "        # Perform Cross-Validation using ROC AUC (Area Under the Curve)\n",
     "        scores = cross_val_score(model, X, y, cv=kfold, scoring='roc_auc', n_jobs=-1)\n",
     "        \n",
     "        end_time = time()\n",
@@ -389,7 +363,7 @@
     "        training_times.append(np.nan)\n",
     "\n",
     "\n",
-    "# 3. Final Summary\n",
+    "# 6. Final Summary\n",
     "\n",
     "results_df = pd.DataFrame({\n",
     "    'Model': model_names,\n",
