Best estimator for LightGBM.

--- a/Classification/Loan_Default_Prediction/Project_01/notebooks/Model_Evaluation.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/notebooks/Model_Evaluation.ipynb
@@ -375,6 +375,14 @@
     "print(\"\\n--- Summary of Model Performance (Ranked by Mean AUC) ---\")\n",
     "print(results_df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b52ae6c6",
+   "metadata": {},
+   "source": [
+    "LightTGBM has shown to be the best model, but it is important to notice that Logistic Regression Model also had a great perfomance in the scaled base. The running time for LightGBM is four times longer than Logistic Regression running time, and since LightGBM can deal better with non-linear relations and is trained in the base without scalation, I will perform a grid search for that algorithm in order to test some hyperparameters e maybe increase the Mean_AUC for LightGBM."
+   ]
   }
  ],
  "metadata": {
