Final LGGBM training - Submission Dir error still to correct

--- a/Classification/Loan_Default_Prediction/Project_01/notebooks/05_Grid_Search_LightGBM.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/notebooks/05_Grid_Search_LightGBM.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6b14ef8f",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
     "\n",
     "# 7. Final Model for Deployment\n",
     "\n",
-    "# Update the global model variable with the optimized settings for Block 15 reuse\n",
+    "# Update the global model variable with the optimized settings\n",
     "model_optimized_lgbm = best_estimator \n",
     "print(\"\\nModel optimized with best parameters stored in 'model_optimized_lgbm'.\")"
    ]
