Final result added to submmission file.

--- a/Classification/Loan_Default_Prediction/Project_01/notebooks/06_Final_LGGBM_trainnig.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/notebooks/06_Final_LGGBM_trainnig.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "1cbb851d",
    "metadata": {},
    "outputs": [
@@ -53,6 +53,7 @@
     "\n",
     "import os\n",
     "import sys\n",
+    "import joblib\n",
     "\n",
     "# Define project Path in Colab\n",
     "PROJECT_BASE_PATH = '/content/drive/MyDrive/Project_01' \n",
@@ -71,8 +72,8 @@
     "try:\n",
     "    from config import Paths\n",
     "    \n",
-    "    # 3. Inicialize a instância com um nome único (cfg)\n",
-    "    cfg = Paths(PROJECT_BASE_PATH) # <-- Mudança aqui\n",
+    "    # 3. Initialize instance of Paths class to manage project directories and files\n",
+    "    cfg = Paths(PROJECT_BASE_PATH) # <-- Change here if needed\n",
     "    cfg.create_dirs() \n",
     "    \n",
     "    print(\"\\n✅ Project configuration (Paths) initialized successfully.\")\n",
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "17648dde",
    "metadata": {},
    "outputs": [
@@ -116,7 +117,14 @@
      "output_type": "stream",
      "text": [
       "✅ Feature matrices prepared and cleaned. Training shape: (307511, 133)\n",
-      "--- Training final model using optimized parameters: {'n_estimators': 1000, 'learning_rate': 0.01, 'num_leaves': 63, 'metric': 'auc', 'boosting_type': 'gbdt', 'n_jobs': -1, 'seed': 42, 'verbose': -1} ---\n"
+      "--- Training final model using optimized parameters: {'n_estimators': 1000, 'learning_rate': 0.01, 'num_leaves': 63, 'metric': 'auc', 'boosting_type': 'gbdt', 'n_jobs': -1, 'seed': 42, 'verbose': -1} ---\n",
+      "✅ Final training completed in 112.25 seconds.\n",
+      "✅ MLOps Artifact: Optimized Model saved to: /content/drive/MyDrive/Project_01/models/final_lgbm_optimized_model.pkl\n",
+      "\n",
+      "=======================================================\n",
+      "✅ MLOps Artifact: Final Submission file saved successfully!\n",
+      "File: /content/drive/MyDrive/Project_01/submissions/submission_lgbm_final.csv\n",
+      "=======================================================\n"
      ]
     }
    ],
@@ -175,7 +183,7 @@
     "\n",
     "joblib.dump(final_model, model_file_path)\n",
     "\n",
-    "print(f\"✅ MLOps Artifact: Optimized Model saved to: {model_file_path.name}\")\n",
+    "print(f\"✅ MLOps Artifact: Optimized Model saved to: {model_file_path}\")\n",
     "\n",
     "\n",
     "# 5. MLOps Artifact 2: Submission File Creation \n",
@@ -192,7 +200,7 @@
     "\n",
     "print(\"\\n=======================================================\")\n",
     "print(f\"✅ MLOps Artifact: Final Submission file saved successfully!\")\n",
-    "print(f\"File: {submission_file_path.name}\")\n",
+    "print(f\"File: {submission_file_path}\")\n",
     "print(\"=======================================================\")"
    ]
   }
