MLOPs artifacts and PredictionClass creation.

--- a/Classification/Loan_Default_Prediction/Project_01/notebooks/03_Feature_Eng.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/notebooks/03_Feature_Eng.ipynb
@@ -1,12 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "eafdeb7a",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2692ba17",
@@ -337,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ed72a400",
    "metadata": {},
    "outputs": [
@@ -380,6 +374,10 @@
     "# 1. Identify Categorical Features\n",
     "# Select all object (string) and category columns\n",
     "categorical_features = df_train_final.select_dtypes(include=['object', 'category']).columns.tolist()\n",
+    "\n",
+    "#Create categorical features table as a MLOPs artifact \n",
+    "categorical_features_df = pd.DataFrame(categorical_features, columns = ['cat_feat'])\n",
+    "categorical_features_df.to_csv(os.path.join(cfg.REPORT_DIR, 'categorical_features.csv'))\n",
     "\n",
     "# Store the target column and the target values\n",
     "TARGET_COLUMN = 'TARGET'\n",
