--- a/Classification/Loan_Default_Prediction/Project_01/notebooks/06_Final_LGGBM_trainnig.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/notebooks/06_Final_LGGBM_trainnig.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "1cbb851d",
    "metadata": {},
    "outputs": [
@@ -10,15 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "✅ Successfully added 'src' directory to Python path.\n",
       "\n",
       "✅ Project configuration (Paths) initialized successfully.\n",
-      "Raw Data Path check: /content/drive/MyDrive/Project_01/data/raw/application_train.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Raw Data Path check: /content/drive/MyDrive/Project_01/data/raw/application_train.csv\n",
       "✅ Loaded Encoded Train Data. Shape: (307511, 135)\n",
       "✅ Loaded Encoded Test Data. Shape: (48744, 134)\n"
      ]
@@ -101,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "17648dde",
    "metadata": {},
    "outputs": [
@@ -117,8 +112,8 @@
      "output_type": "stream",
      "text": [
       "✅ Feature matrices prepared and cleaned. Training shape: (307511, 133)\n",
-      "--- Training final model using optimized parameters: {'n_estimators': 1000, 'learning_rate': 0.01, 'num_leaves': 63, 'metric': 'auc', 'boosting_type': 'gbdt', 'n_jobs': -1, 'seed': 42, 'verbose': -1} ---\n",
-      "✅ Final training completed in 112.25 seconds.\n",
+      "--- Training final model using optimized parameters: {'n_estimators': 1000, 'learning_rate': 0.01, 'num_leaves': 63, 'objective': 'binary', 'metric': 'auc', 'boosting_type': 'gbdt', 'n_jobs': -1, 'seed': 42, 'verbose': -1} ---\n",
+      "✅ Final training completed in 176.36 seconds.\n",
       "✅ MLOps Artifact: Optimized Model saved to: /content/drive/MyDrive/Project_01/models/final_lgbm_optimized_model.pkl\n",
       "\n",
       "=======================================================\n",
@@ -145,9 +140,15 @@
     "X_test = df_test_final[features]\n",
     "\n",
     "# Final NaN/Inf Handling (Crucial)\n",
-    "# This step ensures X is fully numerical after all previous cleaning steps.\n",
-    "X = X.replace([np.inf, -np.inf], np.nan).fillna(X.mean())\n",
-    "X_test = X_test.replace([np.inf, -np.inf], np.nan).fillna(X_test.mean())\n",
+    "# 1. Calculate imputation means only from the training set (X) after converting Inf to NaN.\n",
+    "imputation_means = X.replace([np.inf, -np.inf], np.nan).mean()\n",
+    "\n",
+    "# 2. Apply imputation to X (Training Data)\n",
+    "X = X.replace([np.inf, -np.inf], np.nan).fillna(imputation_means)\n",
+    "\n",
+    "# 3. Apply imputation to X_test (Test Data) using the *same* training means\n",
+    "X_test = X_test.replace([np.inf, -np.inf], np.nan).fillna(imputation_means)\n",
+    "\n",
     "print(f\"✅ Feature matrices prepared and cleaned. Training shape: {X.shape}\")\n",
     "\n",
     "\n",
@@ -157,7 +158,8 @@
     "OPTIMAL_PARAMS = {\n",
     "    'n_estimators': 1000,   \n",
     "    'learning_rate': 0.01, \n",
-    "    'num_leaves': 63,       \n",
+    "    'num_leaves': 63,\n",
+    "    'objective': 'binary',    \n",
     "    'metric': 'auc',\n",
     "    'boosting_type': 'gbdt',\n",
     "    'n_jobs': -1,\n",
