Create main.py, predict.py and 08_Schemaa_Preparation.ipynb files.

--- a/Classification/Loan_Default_Prediction/Project_01/notebooks/07_Prediction_Class_Structure.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/notebooks/07_Prediction_Class_Structure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "2f7f60db",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
       "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.12/dist-packages (from statsmodels>=0.9.0->category_encoders) (25.0)\n",
       "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas>=1.0.5->category_encoders) (1.17.0)\n",
       "Downloading category_encoders-2.9.0-py3-none-any.whl (85 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m85.9/85.9 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m85.9/85.9 kB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hInstalling collected packages: category_encoders\n",
       "Successfully installed category_encoders-2.9.0\n"
      ]
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "8e419124",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a8612c41",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "4800f3d8",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "08c03711",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "6daac310",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "8f469b8d",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "35fdf5dd",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "Name: DAYS_EMPLOYED, Length: 307511, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "324e7bab",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "e3138761",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
+   "id": "96348686",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ DataFrame created successfully and saved at REPORT_DIR as data_train_schema.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creation of a schema for schemas.py in order to deploy an endpoint for the project\n",
+    "df_train_schema = pd.DataFrame(\n",
+    "    df_train_final.dtypes, \n",
+    "    columns = [\"data_type\"]\n",
+    "    )\n",
+    "df_train_schema = df_train_schema.reset_index()\n",
+    "df_train_schema = df_train_schema.rename(columns={'index': 'feature_name'})\n",
+    "\n",
+    "df_train_schema.to_csv(os.path.join(cfg.REPORT_DIR, \"data_train_schema.csv\"))\n",
+    "\n",
+    "print(\"✅ DataFrame created successfully and saved at REPORT_DIR as data_train_schema.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b022f0bd",
    "metadata": {},
    "outputs": [
@@ -444,13 +472,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "cfcafefd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Note: os is assumed for path operations, but the core class logic doesn't use it directly\n",
     "\n",
     "class PredictionHandler:\n",
     "    \"\"\"\n",
@@ -493,7 +519,7 @@
     "        \n",
     "        df = input_df.copy()\n",
     "\n",
-    "        # --- A. Block 11 (Feature Engineering) ---\n",
+    "        # --- A. (Feature Engineering) ---\n",
     "        \n",
     "        # 1. Anomaly Fix (Uses saved value from imputation map)\n",
     "        if 'DAYS_EMPLOYED' in df.columns:\n",
@@ -514,7 +540,7 @@
     "             except:\n",
     "                 pass\n",
     "                \n",
-    "        # --- B. Block 13 (Target Encoding) ---\n",
+    "        # --- B. (Target Encoding) ---\n",
     "        \n",
     "        # Apply the SAVED encoder to the categorical columns of the live data\n",
     "        df = self.target_encoder.transform(df)\n",
