--- a/Classification/Loan_Default_Prediction/Project_01/notebooks/08_Schema_Preparation.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/notebooks/08_Schema_Preparation.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "87f50c68",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pydantic import Field, create_model\n",
+    "from typing import Optional, Any"
    ]
   },
   {
@@ -105,162 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "103fbf3f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'SK_ID_CURR': 'int64',\n",
-       " 'TARGET': 'int64',\n",
-       " 'NAME_CONTRACT_TYPE': 'object',\n",
-       " 'CODE_GENDER': 'object',\n",
-       " 'FLAG_OWN_CAR': 'object',\n",
-       " 'FLAG_OWN_REALTY': 'object',\n",
-       " 'CNT_CHILDREN': 'int64',\n",
-       " 'AMT_INCOME_TOTAL': 'float64',\n",
-       " 'AMT_CREDIT': 'float64',\n",
-       " 'AMT_ANNUITY': 'float64',\n",
-       " 'AMT_GOODS_PRICE': 'float64',\n",
-       " 'NAME_TYPE_SUITE': 'object',\n",
-       " 'NAME_INCOME_TYPE': 'object',\n",
-       " 'NAME_EDUCATION_TYPE': 'object',\n",
-       " 'NAME_FAMILY_STATUS': 'object',\n",
-       " 'NAME_HOUSING_TYPE': 'object',\n",
-       " 'REGION_POPULATION_RELATIVE': 'float64',\n",
-       " 'DAYS_BIRTH': 'int64',\n",
-       " 'DAYS_EMPLOYED': 'int64',\n",
-       " 'DAYS_REGISTRATION': 'float64',\n",
-       " 'DAYS_ID_PUBLISH': 'int64',\n",
-       " 'OWN_CAR_AGE': 'float64',\n",
-       " 'FLAG_MOBIL': 'int64',\n",
-       " 'FLAG_EMP_PHONE': 'int64',\n",
-       " 'FLAG_WORK_PHONE': 'int64',\n",
-       " 'FLAG_CONT_MOBILE': 'int64',\n",
-       " 'FLAG_PHONE': 'int64',\n",
-       " 'FLAG_EMAIL': 'int64',\n",
-       " 'OCCUPATION_TYPE': 'object',\n",
-       " 'CNT_FAM_MEMBERS': 'float64',\n",
-       " 'REGION_RATING_CLIENT': 'int64',\n",
-       " 'REGION_RATING_CLIENT_W_CITY': 'int64',\n",
-       " 'WEEKDAY_APPR_PROCESS_START': 'object',\n",
-       " 'HOUR_APPR_PROCESS_START': 'int64',\n",
-       " 'REG_REGION_NOT_LIVE_REGION': 'int64',\n",
-       " 'REG_REGION_NOT_WORK_REGION': 'int64',\n",
-       " 'LIVE_REGION_NOT_WORK_REGION': 'int64',\n",
-       " 'REG_CITY_NOT_LIVE_CITY': 'int64',\n",
-       " 'REG_CITY_NOT_WORK_CITY': 'int64',\n",
-       " 'LIVE_CITY_NOT_WORK_CITY': 'int64',\n",
-       " 'ORGANIZATION_TYPE': 'object',\n",
-       " 'EXT_SOURCE_1': 'float64',\n",
-       " 'EXT_SOURCE_2': 'float64',\n",
-       " 'EXT_SOURCE_3': 'float64',\n",
-       " 'APARTMENTS_AVG': 'float64',\n",
-       " 'BASEMENTAREA_AVG': 'float64',\n",
-       " 'YEARS_BEGINEXPLUATATION_AVG': 'float64',\n",
-       " 'YEARS_BUILD_AVG': 'float64',\n",
-       " 'COMMONAREA_AVG': 'float64',\n",
-       " 'ELEVATORS_AVG': 'float64',\n",
-       " 'ENTRANCES_AVG': 'float64',\n",
-       " 'FLOORSMAX_AVG': 'float64',\n",
-       " 'FLOORSMIN_AVG': 'float64',\n",
-       " 'LANDAREA_AVG': 'float64',\n",
-       " 'LIVINGAPARTMENTS_AVG': 'float64',\n",
-       " 'LIVINGAREA_AVG': 'float64',\n",
-       " 'NONLIVINGAPARTMENTS_AVG': 'float64',\n",
-       " 'NONLIVINGAREA_AVG': 'float64',\n",
-       " 'APARTMENTS_MODE': 'float64',\n",
-       " 'BASEMENTAREA_MODE': 'float64',\n",
-       " 'YEARS_BEGINEXPLUATATION_MODE': 'float64',\n",
-       " 'YEARS_BUILD_MODE': 'float64',\n",
-       " 'COMMONAREA_MODE': 'float64',\n",
-       " 'ELEVATORS_MODE': 'float64',\n",
-       " 'ENTRANCES_MODE': 'float64',\n",
-       " 'FLOORSMAX_MODE': 'float64',\n",
-       " 'FLOORSMIN_MODE': 'float64',\n",
-       " 'LANDAREA_MODE': 'float64',\n",
-       " 'LIVINGAPARTMENTS_MODE': 'float64',\n",
-       " 'LIVINGAREA_MODE': 'float64',\n",
-       " 'NONLIVINGAPARTMENTS_MODE': 'float64',\n",
-       " 'NONLIVINGAREA_MODE': 'float64',\n",
-       " 'APARTMENTS_MEDI': 'float64',\n",
-       " 'BASEMENTAREA_MEDI': 'float64',\n",
-       " 'YEARS_BEGINEXPLUATATION_MEDI': 'float64',\n",
-       " 'YEARS_BUILD_MEDI': 'float64',\n",
-       " 'COMMONAREA_MEDI': 'float64',\n",
-       " 'ELEVATORS_MEDI': 'float64',\n",
-       " 'ENTRANCES_MEDI': 'float64',\n",
-       " 'FLOORSMAX_MEDI': 'float64',\n",
-       " 'FLOORSMIN_MEDI': 'float64',\n",
-       " 'LANDAREA_MEDI': 'float64',\n",
-       " 'LIVINGAPARTMENTS_MEDI': 'float64',\n",
-       " 'LIVINGAREA_MEDI': 'float64',\n",
-       " 'NONLIVINGAPARTMENTS_MEDI': 'float64',\n",
-       " 'NONLIVINGAREA_MEDI': 'float64',\n",
-       " 'FONDKAPREMONT_MODE': 'object',\n",
-       " 'HOUSETYPE_MODE': 'object',\n",
-       " 'TOTALAREA_MODE': 'float64',\n",
-       " 'WALLSMATERIAL_MODE': 'object',\n",
-       " 'EMERGENCYSTATE_MODE': 'object',\n",
-       " 'OBS_30_CNT_SOCIAL_CIRCLE': 'float64',\n",
-       " 'DEF_30_CNT_SOCIAL_CIRCLE': 'float64',\n",
-       " 'OBS_60_CNT_SOCIAL_CIRCLE': 'float64',\n",
-       " 'DEF_60_CNT_SOCIAL_CIRCLE': 'float64',\n",
-       " 'DAYS_LAST_PHONE_CHANGE': 'float64',\n",
-       " 'FLAG_DOCUMENT_2': 'int64',\n",
-       " 'FLAG_DOCUMENT_3': 'int64',\n",
-       " 'FLAG_DOCUMENT_4': 'int64',\n",
-       " 'FLAG_DOCUMENT_5': 'int64',\n",
-       " 'FLAG_DOCUMENT_6': 'int64',\n",
-       " 'FLAG_DOCUMENT_7': 'int64',\n",
-       " 'FLAG_DOCUMENT_8': 'int64',\n",
-       " 'FLAG_DOCUMENT_9': 'int64',\n",
-       " 'FLAG_DOCUMENT_10': 'int64',\n",
-       " 'FLAG_DOCUMENT_11': 'int64',\n",
-       " 'FLAG_DOCUMENT_12': 'int64',\n",
-       " 'FLAG_DOCUMENT_13': 'int64',\n",
-       " 'FLAG_DOCUMENT_14': 'int64',\n",
-       " 'FLAG_DOCUMENT_15': 'int64',\n",
-       " 'FLAG_DOCUMENT_16': 'int64',\n",
-       " 'FLAG_DOCUMENT_17': 'int64',\n",
-       " 'FLAG_DOCUMENT_18': 'int64',\n",
-       " 'FLAG_DOCUMENT_19': 'int64',\n",
-       " 'FLAG_DOCUMENT_20': 'int64',\n",
-       " 'FLAG_DOCUMENT_21': 'int64',\n",
-       " 'AMT_REQ_CREDIT_BUREAU_HOUR': 'float64',\n",
-       " 'AMT_REQ_CREDIT_BUREAU_DAY': 'float64',\n",
-       " 'AMT_REQ_CREDIT_BUREAU_WEEK': 'float64',\n",
-       " 'AMT_REQ_CREDIT_BUREAU_MON': 'float64',\n",
-       " 'AMT_REQ_CREDIT_BUREAU_QRT': 'float64',\n",
-       " 'AMT_REQ_CREDIT_BUREAU_YEAR': 'float64',\n",
-       " 'IPCA': 'float64',\n",
-       " 'SELIC': 'float64',\n",
-       " 'SELIC_LAG1': 'float64',\n",
-       " 'SELIC_CHANGE': 'float64',\n",
-       " 'SELIC_ROLLING_MEAN3': 'float64',\n",
-       " 'IPCA_LAG1': 'float64',\n",
-       " 'IPCA_CHANGE': 'float64',\n",
-       " 'IPCA_ROLLING_MEAN3': 'float64',\n",
-       " 'MONTH_OF_YEAR': 'int32',\n",
-       " 'YEAR': 'int32',\n",
-       " 'CREDIT_INCOME_RATIO': 'float64',\n",
-       " 'ANNUITY_INCOME_RATIO': 'float64',\n",
-       " 'PAYMENT_RATE': 'float64'}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "features_dtypes_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4c3d9307",
    "metadata": {},
    "outputs": [],
@@ -350,10 +198,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c011f181",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Paths' object has no attribute 'SRC_DIR'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipython-input-3983373435.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgenerate_schemas_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mschema_df_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcfg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSRC_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'schemas.py'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Paths' object has no attribute 'SRC_DIR'"
+     ]
+    }
+   ],
    "source": [
     "generate_schemas_file(schema_df_train, os.path.join(cfg.SRC_DIR, 'schemas.py'))"
    ]
