Update schemas.py for correct mandatory fields.

--- a/Classification/Loan_Default_Prediction/Project_01/notebooks/08_Schema_Preparation.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/notebooks/08_Schema_Preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "87f50c68",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,13 @@
     "import sys\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from pydantic import Field, create_model\n",
+    "from pydantic import Field, create_model, BaseModel\n",
     "from typing import Optional, Any"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "49722b8b",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6cd01960",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "692fa6d3",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "86c9a7c8",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "4c3d9307",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
     "    # 3. Dynamically Create the Model\n",
     "    LoanApplicationRawInput = create_model(\n",
     "        'LoanApplicationRawInput', \n",
-    "        __base__=pd.BaseModel, # Assuming BaseModel is available\n",
+    "        __base__= BaseModel, # Assuming BaseModel is available\n",
     "        **pydantic_fields\n",
     "    )\n",
     "\n",
@@ -198,19 +198,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "c011f181",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Paths' object has no attribute 'SRC_DIR'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipython-input-3983373435.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgenerate_schemas_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mschema_df_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcfg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSRC_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'schemas.py'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Paths' object has no attribute 'SRC_DIR'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Successfully generated schemas.py at /content/drive/MyDrive/Project_01/src/schemas.py\n"
      ]
     }
    ],
